--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
     <description>Builds, tests, and runs the project FLIMPlateReaderGUI.</description>
     <import file="nbproject/build-impl.xml"/>
     <target name="-post-jar">
-        <copy file="${dist.jar}/" tofile="C:/Program Files/Micro-Manager-1.4 x64 December build/mmplugins/FLIMPlateReaderGUI.jar"></copy>
+        <copy file="${dist.jar}/" tofile="C:/Program Files/Micro-Manager-1.4 20 October 32/mmplugins/FLIMPlateReaderGUI.jar"></copy>
     </target>
     
     <!--
