--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\dk1109\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
-work.dir=C:\\Program Files\\Micro-Manager-1.4 x64 December build
+user.properties.file=C:\\Users\\Frederik\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+work.dir=C:\\Program Files\\Micro-Manager-1.4 20 October 32
