--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,6 +54,7 @@ file.reference.MMAcqEngine.jar=C:\\Program Files\\Micro-Manager-1.4 20 October 3
 file.reference.MMCoreJ.jar=C:\\Program Files\\Micro-Manager-1.4 20 October 32\\plugins\\Micro-Manager\\MMCoreJ.jar
 file.reference.MMJ_.jar=C:\\Program Files\\Micro-Manager-1.4 20 October 32\\plugins\\Micro-Manager\\MMJ_.jar
 file.reference.ome-xml.jar=C:\\Program Files\\Micro-Manager-1.4 20 October 32\\plugins\\Micro-Manager\\ome-xml.jar
+file.reference.poi-3.10.1-20140818.jar=C:\\Program Files\\Micro-Manager-1.4 20 October 32\\plugins\\Micro-Manager\\poi-3.10.1-20140818.jar
 file.reference.rsyntaxtextarea.jar=C:\\Program Files\\Micro-Manager-1.4 20 October 32\\plugins\\Micro-Manager\\rsyntaxtextarea.jar
 file.reference.scifio.jar=C:\\Program Files\\Micro-Manager-1.4 20 October 32\\plugins\\Micro-Manager\\scifio.jar
 file.reference.slf4j-api-1.7.1.jar=C:\\Program Files\\Micro-Manager-1.4 20 October 32\\plugins\\Micro-Manager\\slf4j-api-1.7.1.jar
@@ -95,7 +96,8 @@ javac.classpath=\
     ${file.reference.swing-layout-1.0.4.jar}:\
     ${file.reference.swingx-0.9.5.jar}:\
     ${file.reference.trident.jar}:\
-    ${file.reference.ij.jar}
+    ${file.reference.ij.jar}:\
+    ${file.reference.poi-3.10.1-20140818.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
