* Implement filter cube changes in sequenced acquisition. * Implement currentFOV, handled as a variable in the HCAFLIMPluginFrame * Start implementing more sensible handling of magnification and objectives - restricting AF objectives to those present on the system, and getting the magnification from the objective label.

--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,9 @@
     <import file="nbproject/build-impl.xml"/>
     <target name="-post-jar">
         <copy file="${dist.jar}/" tofile="C:/Program Files/Micro-Manager-1.4 x64 December build/mmplugins/FLIMPlateReaderGUI.jar"></copy>
+        <copy todir="OpenHCAFLIM">
+            <fileset dir="C:/Program Files/Micro-Manager-1.4 x64 December build/mmplugins/"/>
+        </copy>
     </target>
     
     <!--
