* Modified cfg file so that objectives are named consistently with ZDC definitions * For now, remove getMagnification methods * Add combobox to edit filter cube in sequenced acquisition

--- a/cfg/Widefield.cfg
+++ b/cfg/Widefield.cfg
@@ -110,11 +110,11 @@ Label,SpectralFW,2,620/60
 Label,SpectralFW,1,525/50
 Label,SpectralFW,0,465/30
 # Objective
-Label,Objective,5,UPlanFl 20x 0.5
-Label,Objective,4,UPlanApo 10x 0.4
-Label,Objective,3,LUCPlanFLN 40x 0.6
-Label,Objective,2,UPlanApo 4x 0.16
-Label,Objective,1,UPlanSApo 100x 1.4 Oil
+Label,Objective,5,UPlanFl 20X
+Label,Objective,4,UPlanApo 10x
+Label,Objective,3,LUCPLFLN40X
+Label,Objective,2,UPlanApo 4x
+Label,Objective,1,UPlanSApo100XO
 Label,Objective,0,BFP target
 # LightPathPrism
 Label,LightPathPrism,1,Side Port
