--- a/cfg/ORCA+Flea2+ALLFILT.cfg
+++ b/cfg/ORCA+Flea2+ALLFILT.cfg
@@ -136,11 +136,11 @@ Label,CSUX-Dichroic Mirror,2,488-532
 Label,CSUX-Dichroic Mirror,1,442-514-647
 Label,CSUX-Dichroic Mirror,0,473-561
 # Objective
-Label,Objective,5,UPlanFl 20x 0.5
-Label,Objective,4,UPlanApo 10x 0.4
-Label,Objective,3,LUCPlanFLN 40x 0.6
-Label,Objective,2,UPlanApo 4x 0.16
-Label,Objective,1,UPlanSApo 100x 1.4 Oil
+Label,Objective,5,UPlanFl 20X
+Label,Objective,4,UPlanApo 10x
+Label,Objective,3,LUCPLFLN40X
+Label,Objective,2,UPlanApo 4x
+Label,Objective,1,UPlanSApo100XO
 Label,Objective,0,BFP target
 # LightPathPrism
 Label,LightPathPrism,1,Side Port
