Finished, array load and TimeCourseSequencing load.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Frederik\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
-work.dir=C:\\Program Files\\Micro-Manager-1.4 20 October 32
+work.dir=C:\\Users\\Frederik\\Micro-Manager-1.4 20 October 32
