--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -125,7 +125,7 @@ main.class=ij.ImageJ
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=JDK_1.6_x64
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
