--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,42 +31,41 @@ dist.jar=${dist.dir}/FLIMPlateReaderGUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\AbsoluteLayout.jar
-file.reference.bioformats_package.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\bioformats_package.jar
-file.reference.bsh-2.0b4.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\bsh-2.0b4.jar
-file.reference.clojure.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\clojure.jar
-file.reference.clooj.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\clooj.jar
-file.reference.commons-math-2.0.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\commons-math-2.0.jar
-file.reference.commons-math3-3.2.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\commons-math3-3.2.jar
-file.reference.core.cache.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\core.cache.jar
-file.reference.core.memoize.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\core.memoize.jar
-file.reference.data.json.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\data.json.jar
-file.reference.gproto.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\gproto.jar
-file.reference.gson-2.2.4.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\gson-2.2.4.jar
-file.reference.guava-17.0.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\guava-17.0.jar
-file.reference.ij.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\ij.jar
-file.reference.jcommon-1.0.16.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\jcommon-1.0.16.jar
-file.reference.jfreechart-1.0.13.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\jfreechart-1.0.13.jar
-file.reference.loci-common.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\loci-common.jar
-file.reference.lwm.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\lwm.jar
-file.reference.miglayout-4.0-swing.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\miglayout-4.0-swing.jar
-file.reference.MMAcqEngine.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\MMAcqEngine.jar
-file.reference.MMCoreJ.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\MMCoreJ.jar
-file.reference.MMJ_.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\MMJ_.jar
-file.reference.ome-xml.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\ome-xml.jar
-file.reference.poi-3.10.1-20140818.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\poi-3.10.1-20140818.jar
-file.reference.rsyntaxtextarea.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\rsyntaxtextarea.jar
-file.reference.scifio.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\scifio.jar
-file.reference.slf4j-api-1.7.1.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\slf4j-api-1.7.1.jar
-file.reference.substance.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\substance.jar
-file.reference.swing-layout-1.0.4.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\swing-layout-1.0.4.jar
-file.reference.swingx-0.9.5.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\swingx-0.9.5.jar
-file.reference.trident.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\trident.jar
-file.reference.TSFProto.jar=C:\\Program Files\\Micro-Manager-1.4 x64 December build\\plugins\\Micro-Manager\\TSFProto.jar
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\AbsoluteLayout.jar
+file.reference.bioformats_package.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\bioformats_package.jar
+file.reference.bsh-2.0b4.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\bsh-2.0b4.jar
+file.reference.clojure.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\clojure.jar
+file.reference.clooj.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\clooj.jar
+file.reference.commons-math-2.0.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\commons-math-2.0.jar
+file.reference.commons-math3-3.2.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\commons-math3-3.2.jar
+file.reference.core.cache.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\core.cache.jar
+file.reference.core.memoize.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\core.memoize.jar
+file.reference.data.json.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\data.json.jar
+file.reference.gproto.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\gproto.jar
+file.reference.gson-2.2.4.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\gson-2.2.4.jar
+file.reference.guava-17.0.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\guava-17.0.jar
+file.reference.ij.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\ij.jar
+file.reference.jcommon-1.0.16.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\jcommon-1.0.16.jar
+file.reference.jfreechart-1.0.13.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\jfreechart-1.0.13.jar
+file.reference.loci-common.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\loci-common.jar
+file.reference.lwm.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\lwm.jar
+file.reference.miglayout-4.0-swing.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\miglayout-4.0-swing.jar
+file.reference.MMAcqEngine.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\MMAcqEngine.jar
+file.reference.MMCoreJ.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\MMCoreJ.jar
+file.reference.MMJ_.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\MMJ_.jar
+file.reference.ome-xml.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\ome-xml.jar
+file.reference.poi-3.10.1-20140818.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\poi-3.10.1-20140818.jar
+file.reference.rsyntaxtextarea.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\rsyntaxtextarea.jar
+file.reference.scifio.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\scifio.jar
+file.reference.slf4j-api-1.7.1.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\slf4j-api-1.7.1.jar
+file.reference.substance.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\substance.jar
+file.reference.swing-layout-1.0.4.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\swing-layout-1.0.4.jar
+file.reference.swingx-0.9.5.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\swingx-0.9.5.jar
+file.reference.trident.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\trident.jar
+file.reference.TSFProto.jar=C:\\Program Files\\Micro-Manager-1.4 x64\\plugins\\Micro-Manager\\TSFProto.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ij.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.MMAcqEngine.jar}:\
     ${file.reference.MMCoreJ.jar}:\
@@ -97,7 +96,8 @@ javac.classpath=\
     ${file.reference.substance.jar}:\
     ${file.reference.swing-layout-1.0.4.jar}:\
     ${file.reference.swingx-0.9.5.jar}:\
-    ${file.reference.trident.jar}
+    ${file.reference.trident.jar}:\
+    ${file.reference.ij.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
