Calibration file not longer hard coded, maybe!

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -89,7 +89,6 @@ javac.classpath=\
     ${file.reference.lwm.jar}:\
     ${file.reference.miglayout-4.0-swing.jar}:\
     ${file.reference.ome-xml.jar}:\
-    ${file.reference.poi-3.10.1-20140818.jar}:\
     ${file.reference.rsyntaxtextarea.jar}:\
     ${file.reference.scifio.jar}:\
     ${file.reference.slf4j-api-1.7.1.jar}:\
@@ -97,7 +96,8 @@ javac.classpath=\
     ${file.reference.swing-layout-1.0.4.jar}:\
     ${file.reference.swingx-0.9.5.jar}:\
     ${file.reference.trident.jar}:\
-    ${file.reference.ij.jar}
+    ${file.reference.ij.jar}:\
+    ${file.reference.poi-3.10.1-20140818.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
