Updated the .gitignore file to remove private.properties and project.properties from tracking via Stop Tracking, then Ignoring the blue question mark version that comes up in unstaged files (also adds a .gitignore file!)

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ FLIMPlateReaderGUI/build.xml
 /build/
 nbproject/private/private.xml
 nbproject/project.properties
+nbproject/private/private.properties
